force-app/main/default/objects/Lead/fields/Country_ISO2__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO2__c</fullName>
    <formula>WSCountry__r.ISO2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country ISO2</label>
    <type>Text</type>
</CustomField>