force-app/main/default/objects/Lead/fields/Country_ISO3__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO3__c</fullName>
    <formula>WSCountry__r.ISO3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country ISO3</label>
    <type>Text</type>
</CustomField>