force-app/main/default/objects/Lead/fields/Country_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Country_Subregion__c</fullName>
    <formula>WSCountry__r.Subregion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Subregion</label>
    <type>Text</type>
</CustomField>