force-app/main/default/objects/Lead/fields/Owner_since__c.field-meta.xml
<CustomField>
    <fullName>Owner_since__c</fullName>
    <label>Owner since</label>
    <type>DateTime</type>
</CustomField>