force-app/main/default/objects/Lead/fields/WSCountry__c.field-meta.xml
<CustomField>
    <fullName>WSCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the WSCountry</description>
    <label>WSCountry</label>
    <referenceTo>WSCountry__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>