force-app/main/default/objects/Lead/validationRules/Country_Source_and_Nomber_of_Emplyees.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Source_and_Nomber_of_Emplyees</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(OwnerId),
OR(ISBLANK(Country),  ISBLANK(TEXT(LeadSource)), ISBLANK(NumberOfEmployees)))</errorConditionFormula>
    <errorMessage>Can&apos;t change Owner if Country, Source and number of emplyees is not filled in and you are not the Contract manager or the Adminstrator. Contract managers still need to fill in Source and Country, Administrators still need to fill in the Lead Source.</errorMessage>
</ValidationRule>